Fix site screenshot overflowed width causing horizontal scrolling
- Similar issue was fixed in 64199ef
- https://stackoverflow.com/a/3463722/2421313

--- a/site/app/assets/stylesheets/home.css
+++ b/site/app/assets/stylesheets/home.css
@@ -49,5 +49,6 @@
 .screenshot {
   display: flex;
   justify-content: center;
+  max-width: 100%;
   min-height: 200px;
 }
